add slide button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   			<li class="picture image5"> </li>
   		</ul>
   	</div>
+    <div class="navButton">
+      <button id="left">Left</button>
+      <button id="right">Right</button>
+    </div>  
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
